ingres/nginx-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nginx-pod
  labels:
    app: nginx-web  
spec:
  restartPolicy: Always  
  containers:
    - name: nginx
      image: nginx
      command: ["nginx", "-g", "daemon off;"]  
      volumeMounts:
        - name: nfs-volume
          mountPath: /usr/share/nginx/html
          subPath: nginx
  volumes:
    - name: nfs-volume
      persistentVolumeClaim:
        claimName: nfs-pvc
